--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 const pageTitle = 'About Me';
 
 const id = {
@@ -13,6 +15,11 @@ const skills = ['HTML', 'CSS', 'JS', 'React', 'Astro', 'Svelte', 'and more!']
 const happy 	 = true;
 const finished = false;
 const goal 		 = 3;
+
+const skillColor = 'crimson';
+const fontWeight = 'bold';
+const textCase 	 = 'uppercase';
+
 ---
 
 <html lang="en">
@@ -45,7 +52,7 @@ const goal 		 = 3;
 		</ul>
 		<p>My skills are:</p>
 		<ul>
-			{skills.map((skill) => <li>{skill}</li>)}
+			{skills.map((skill) => <li class="skill">{skill}</li>)}
 		</ul>
 
 		{happy && <p>I am happy to be learning Astro!</p>}
@@ -55,3 +62,15 @@ const goal 		 = 3;
 		{goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
 	</body>
 </html>
+
+<style define:vars={{skillColor, fontWeight, textCase}}>
+  h1 {
+    color: purple;
+    font-size: 4rem;
+  }
+  .skill {
+    color: var(--skillColor);
+    font-weight: var(--fontWeight);
+		text-transform: var(--textCase);
+  }
+</style>
