--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
 const pageTitle = 'About Me';
@@ -19,7 +21,6 @@ const goal 		 = 3;
 const skillColor = 'crimson';
 const fontWeight = 'bold';
 const textCase 	 = 'uppercase';
-
 ---
 
 <html lang="en">
@@ -31,9 +32,7 @@ const textCase 	 = 'uppercase';
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Header />
 
 		<h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
@@ -60,6 +59,12 @@ const textCase 	 = 'uppercase';
 		{finished && <p>I finished this tutorial!</p>}
 
 		{goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+
+		<Footer />
+
+		<script>
+			import '../scripts/menu.js';
+		</script>
 	</body>
 </html>
 
