Feat: interactivity w/ Preact & js

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ const id = {
 const skills = ['HTML', 'CSS', 'JS', 'React', 'Astro', 'Svelte', 'and more!']
 
 const happy 	 = true;
-const finished = false;
+const finished = true;
 const goal 		 = 3;
 
 const skillColor = 'crimson';
