--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-import Greeting   from '../components/Greeting';
+import Greeting   from '../components/Greeting.svelte'
 const pageTitle = 'Home Page';
 ---
 
